--- a/pom.xml
+++ b/pom.xml
@@ -8,4 +8,22 @@
     <artifactId>ASTDistanceTools</artifactId>
     <version>1.0.0</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.approxlib</groupId>
+            <artifactId>approxlib</artifactId>
+            <version>1.0.0</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/lib/approxlib_v1.0.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+
+    </dependencies>
+
+
 </project>
